gcc/testsuite/rust/rustc/ui/typeck/check-args-on-fn-err_dg.rs
fn main() {
    unknown(1, |glyf| {
// { dg-error ".E0425." "" { target *-*-* } .-1 }
        let actual = glyf;
    });
}

